fixed major mobile responsive issues and overlaps

--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@ aside {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    width: 20%;
+    width: 20vw;
+    height: 35vw;
+    padding: 15px;
     border: 1px solid rgba(45, 205, 229, 1);
     border-radius: 5px;
     text-align: center;
@@ -63,6 +65,15 @@ aside {
     right: 3%;
 }
 
+.playerStats {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 90%;
+}
+
 .glowBlue {
     box-shadow: 0 0 20px #fff, 0 0 40px #2dcde5, 0 0 60px #2dcde5, 0 0 80px #2dcde5;
 }
@@ -77,7 +88,7 @@ aside {
     width: 42vw;
     height: 42vw;
     position: absolute;
-    top: 52%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -110,7 +121,6 @@ h2 {
 .chip {
     width: 100%;
     height: 100%;
-    cursor: default;
 }
 
 .hideChip {
@@ -120,7 +130,9 @@ h2 {
 .chipGhostOutline {
     display: inline-block;
     opacity: 0.15;
+    cursor: pointer;
 }
+
 .cell:hover .chipGhostOutline {
     opacity: 0.3;
 }
@@ -316,10 +328,6 @@ h2 {
     font-family: 'Rationale', sans-serif;
     font-size: 10vmin;
     text-align: center;
-    /* position: absolute;
-    top: 30vh;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 .playerBox1Win {
@@ -360,7 +368,6 @@ h2 {
     font-size: 1em;
     text-align: center;
     -moz-box-sizing: border-box;
-    z-index:-1;
     position: absolute;
     top: auto;
     left: 0;
@@ -380,7 +387,6 @@ h2 {
     color: #fff;
     font-size: 1em;
     text-align: center;
-    z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
@@ -450,22 +456,20 @@ h2 {
     }
 
     #gameboard {
-        width: 75vw;
-        height: 75vw;
-        /* max-width: 60vmin;
-        max-height: 60vmin; */
-    }
-
-    .cell {
-        font-size: 4.5vmin;
+        width: 55vw;
+        height: 55vw;
     }
 
     aside {
-        width: 60%;
-        top: 0;
-        position: relative;
+        width: 60vw;
+        height: 15vh;
+        top: initial;
         margin: auto;
         background-color: black;
+    }
+
+    .cell .chip {
+        font-size: 3vmin;
     }
 
     .discs {
@@ -474,14 +478,19 @@ h2 {
     }
 
     .leftAside {
-        top: 15%;
-        left: 0%;
+        top: 5%;
+        left: 50%;
+        transform: translate(-50%, 0);
     }
 
     .rightAside {
-        clear: both;
-        top: 74%;
-        right: 0%;
+        bottom: 5%;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+
+    .playerStats {
+        height: auto;
     }
 
     .playerStats .blue, .playerStats .orange {
@@ -503,19 +512,9 @@ h2 {
         margin: 0;
     }
 
-    .orange {
-        text-shadow: 0 0 10px #FF9900, 0 0 15px #FF9900, 0 0 20px #FF9900, 0 0 35px #FF9900, 0 0 40px #FF9900, 0 0 50px #FF9900, 0 0 75px #FF9900;
-    }
-
-    .blue {
-        text-shadow: 0 0 10px #2dcde5, 0 0 15px #2dcde5, 0 0 20px #2dcde5, 0 0 35px #2dcde5, 0 0 40px #2dcde5, 0 0 50px #2dcde5, 0 0 75px #2dcde5;
-    }
-
-
-
-/**********************************/
-/******** win modal *************/
-/**********************************/
+    /**********************************/
+    /******** win modal *************/
+    /**********************************/
 
     .winnerModalHeader {
         font-size: 9vmin;
@@ -531,82 +530,65 @@ h2 {
         height: 25%;
     }
 
-}
+    @media only screen and (orientation: landscape) {
+          #gameboard {
+              width: 55vh;
+              height: 55vh;
+          }
+          .directions {
+              width: 55vw;
+          }
+          .playerBox1, .playerBox2 {
+              width: 15%;
+          }
+          aside {
+              position: absolute;
+              transform: translate(0, -50%);
+              width: 15vw;
+              height: 35vw;
+              border: 1px solid rgba(45, 205, 229, 1);
+              border-radius: 5px;
+          }
+          .rightAside {
+              right: 3%;
+              top: 50%;
+              bottom: initial;
+              left: initial;
+              transform: translate(0, -50%);
+          }
 
-@media screen and (max-width: 768px){
+          .leftAside {
+              left: 3%;
+              top: 50%;
+              transform: translate(0, -50%);
+          }
 
-    .rightAside {
-        top: 74%;
+          .playerStats .blue, .playerStats .orange {
+              display: block;
+              float: none;
+              font-size: 3vmin;
+          }
+
+          .playerStats div {
+              display: block;
+              margin: 0;
+          }
+
+          .winModalContent .playerBox {
+              width: 25%;
+              height: 30%;
+          }
     }
-
-    #gameboard {
-        max-width: 60vmin;
-        max-height: 60vmin;
-    }
-
-    .cell {
-        font-size: 3.5vmin;
-    }
-}
-
-@media only screen
-  and (min-width: 360px)
-  and (max-width: 768px)
-  and (max-height: 672px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-      .directions {
-          width: 55vw;
-      }
-      .playerBox1, .playerBox2 {
-          width: 15%;
-      }
-      aside {
-          position: absolute;
-          transform: translate(0, -50%);
-          width: 20%;
-          border: 1px solid rgba(45, 205, 229, 1);
-          border-radius: 5px;
-      }
-      .rightAside {
-          right: 3%;
-          top: 50%;
-      }
-
-      .leftAside {
-          left: 3%;
-          top: 50%;
-      }
-
-      .playerStats .blue, .playerStats .orange {
-          display: block;
-          float: none;
-      }
-
-      .playerStats div {
-          display: block;
-          margin: 0;
-      }
-
-      #gameboard {
-          max-width: 80vmin;
-          max-height: 80vmin;
-      }
-
-      .cell {
-          font-size: 4.5vmin;
-      }
-
-      .winModalContent .playerBox {
-          width: 25%;
-          height: 30%;
-      }
-
 }
 
 @media screen and (max-width: 450px){
     body {
         min-height: 550px;
+    }
+
+    #gameboard {
+        width: 75vw;
+        height: 75vw;
     }
 
     .container {
@@ -619,5 +601,17 @@ h2 {
 
     .winModalContent .playerBox {
         top: 60%;
+    }
+
+    .cell .chip {
+        font-size: 4vmin;
+    }
+
+    .orange {
+        text-shadow: 0 0 10px #FF9900, 0 0 15px #FF9900, 0 0 20px #FF9900, 0 0 35px #FF9900, 0 0 40px #FF9900, 0 0 50px #FF9900, 0 0 75px #FF9900;
+    }
+
+    .blue {
+        text-shadow: 0 0 10px #2dcde5, 0 0 15px #2dcde5, 0 0 20px #2dcde5, 0 0 35px #2dcde5, 0 0 40px #2dcde5, 0 0 50px #2dcde5, 0 0 75px #2dcde5;
     }
 }
